2002-01-26  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* pp/op_merge.c: remove FIXME
	* pp/op_time.cpp: minor fix
	
	* pp/opf_filter.h:
	* pp/opf_filter.cpp:
	* pp/oprofpp.cpp:
	* pp/opf_container.cpp: Show more clearly than
	  samples_files_t support adding any number of samples
	  files to the underlined container.

2002-01-26  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp_util.cpp: allow to load image without symbols

	* pp/Makefile.in:
	* pp/op_time: implement -l option that show symbols details.
	  Currently with separate-samples files symbols are showed
	  more than one time. This is a bug rather a feature.
	* doc/oprofile.1.in:
	* doc/oprofile.sgml: document op_time -l

	* dae/opd_proc.c: bug fix from last change

2002-01-25  John Levon  <moz@compsoc.man.ac.uk>

	* TODO:
	* dae/opd_proc.c: search maps in reverse order so we prefer
	  newer mappings.
 
2002-01-25  Philippe Elie  <ph_e@club-internet.fr>

	* pp/op_merge.cpp: minor fix + comment
	* pp/op_time.cpp: comment, use samples_file_t
	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp: minor change

2002-01-24  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: remove stale comment

	* TODO: update

	* module/compat.h:
	* module/compat22.h:
	* module/compat24.h: fix for pte_page on 2.2.20+
 
2002-01-24  Philippe Elie  <ph_e@club-internet.fr>

	* op_merge.cpp:
	* oprofpp.h:
	* oprofpp_util.cpp: code move + cleanup

2002-01-23  Philippe Elie  <ph_e@club-internet.fr>

	* util/shared_ptr.h: a templatized shared pointer.

	* pp/op_merge.c: new to merge samples files
	* pp/Makefile.in:
	* pp/opf_filter.cpp:
	* pp/opf_filter.h:
	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp: minor change to add op_merge support

	* doc/Makefile.in:
	* doc/oprofile.1.in:
	* doc/oprofle.smgl: document op_merge

2002-01-22  John Levon  <moz@compsoc.man.ac.uk>

	* module/Makefile.in: can only depmod if we run that kernel
 
	* module/op_fixmap.c: deal with no APIC config for
	  2.4.10+
 